<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/random_button_text"
            android:id="@+id/randomCardButton"
            android:layout_margin="4dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reset_button_text"
            android:id="@+id/resetCardsButton"
            android:layout_margin="4dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newcard_button_text"
            android:id="@+id/addCardButton"
            android:layout_margin="4dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/show_answer_button_text"
            android:id="@+id/showAnswerButton"
            android:layout_margin="4dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mark_correct_button_text"
            android:id="@+id/markCorrectButton"
            android:layout_margin="4dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionTextView"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        />

</LinearLayout>